<resources>
    <string name="app_name">Coffee District</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_login">Login</string>
    <string name="drawer_mycart">My Cart</string>
    <string name="drawer_myorder">My Orders</string>
    <string name="drawer_myprofile">My Profile</string>
    <string name="drawer_coffeeclub">Coffee Club</string>
    <string name="drawer_coffeblog">Coffee Blog</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_aboutus">About App</string>
    <string name="drawer_contactus">Contact Us</string>
    <string name="drawer_catring">Catring</string>
    <string name="drawer_offer">Offers</string>
    <string name="drawer_gift_cart">Gift Card</string>


    <string name="drawer_faq">FAQ</string>
    <string name="title_activity_login_screen">Login</string>
    <string name="title_activity_registration_screen">RegistrationScreen</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="enter_old_pss_hint">Enter old password</string>
    <string name="enter_new_pss_hint">Enter new password</string>
    <string name="enter_new_pss_confirm_hint">Confirm new password</string>


    <string name="mobile_address">Mobile</string>
    <string name="password">PASSWORD</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_up">SING UP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_location">CHOOSE YOUR LOCATION</string>
    <string name="pickup">PICKUP</string>
    <string name="delivery">DELIVERY</string>
    <string name="slct_u_location">Select your location</string>
    <string name="select">select</string>
    <string name="search">Search</string>
    <string name="filter_by">Filter by</string>
    <string name="all">All</string>
    <string name="open_now">Open Now</string>
    <string name="schedule_delivery">Schedule Delivery</string>
    <string name="filter">FILTER</string>
    <string name="reset">RESET</string>
    <string name="contact_us_contact_info">Contact us directly: \nPhone: 22222222 \nEmail: info@cofedistrict.com</string>
    <string name="coffee">COFFEE</string>
    <string name="freeze">FREEZE</string>
    <string name="juices">JUICES</string>
    <string name="smoothies">SMOTHIES</string>
    <string name="view_order">VIEW ORDER</string>
    <string name="size">SIZE</string>
    <string name="special_req">SPECIAL REQUEST (OPTIONAL)</string>
    <string name="another_req">Another request? Type here…</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="purchase">PURCHASE</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="delivery_s">Delivery</string>
    <string name="add_voucher">Add Voucher Code</string>
    <string name="plz_select_item">Please add Item</string>
    <string name="my_cart">My Cart</string>
    <string name="terms_cart">Policy and Terms</string>
    <string name="knet">KNET</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_num">Card Number</string>
    <string name="exp_date">Exp Date</string>
    <string name="svv_svc">SVV/SVC</string>
    <string name="proceed">PROCEED</string>
    <string name="thank_u">THANK YOU !</string>
    <string name="payment_success">Your payment has been successful !</string>
    <string name="view_summery">VIEW SUMMERY</string>
    <string name="choose_payment">Choose Payment Method</string>
    <string name="my_order">My Order</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="phone_num">Phone number</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="account">ACCOUNT</string>
    <string name="email">Email</string>
    <string name="password_sm">Password</string>
    <string name="log_out">LOG OUT</string>
    <string name="view_addresses">View Addresses List</string>

    <string name="terms_policy">Terms and Policy</string>
    <string name="my_profile">My Profile</string>
    <string name="catering">Catering</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About us</string>
    <string name="setting">Setting</string>
    <string name="settings">SETTINGS</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="save">SAVE</string>
    <string name="offers">Offers</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_quastion">Forget Password?</string>
    <string name="change_password_title">Change Password</string>

    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Enter your email below to recieve your password reset instructions</string>
    <string name="enter_old_new_confirm_pass">Enter your email below to recieve your password reset instructions</string>
    <string name="submit">Submit</string>

    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="location_arrays">

    </string-array>
s
</resources>
