<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:title="@string/drawer_login" />

        <item
            android:id="@+id/nav_home"
            android:title="@string/drawer_home" />


        <item
            android:id="@+id/nav_order"
            android:title="@string/drawer_myorder" />

        <item
            android:id="@+id/nav_cart"
            android:title="@string/drawer_mycart" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/drawer_myprofile" />


        <item
            android:id="@+id/nav_coffeblog"
            android:title="@string/drawer_coffeblog" />

        <item
            android:id="@+id/nav_catring"
            android:title="@string/drawer_catring" />

        <item
            android:id="@+id/nav_offers"
            android:title="@string/drawer_offer" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/drawer_setting" />
        <item
            android:id="@+id/nav_aboutapp"
            android:title="@string/drawer_aboutus" />

        <item
            android:id="@+id/nav_contactus"
            android:title="@string/drawer_contactus" />
        <item
            android:id="@+id/nav_policy"
            android:title="@string/terms_cart" />

        <item
            android:id="@+id/nav_faq"
            android:title="@string/drawer_faq" />
    </group>

</menu>