<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    card_view:cardBackgroundColor="@color/White"
    card_view:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/forget_password2x" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/question_icon2x" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/change_password_title"
            android:textColor="@color/Black"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/editText_oldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_old_pss_hint"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/editText_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_new_pss_hint"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/editText_confirmNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_new_pss_confirm_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:id="@+id/button_changePassSubmit"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/confirm_button"
                android:text="@string/submit"
                android:textColor="@color/White" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
