<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"

    tools:context="mawaqaajo.com.coffeedistrict.Fragments.CreditCardFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/card_num_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/card_numTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/visa_icon"
            android:ems="10"
            android:hint="@string/card_num"
            android:inputType="number"
            android:maxLength="16" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_num_input"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_alignBottom="@+id/textInputLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/exp_dateTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/exp_date"
                android:inputType="number"
                android:maxLength="5" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:id="@+id/textInputLayout">

            <EditText
                android:id="@+id/useremail_logiTXT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableRight="@mipmap/visa_number"
                android:ems="6"
                android:hint="@string/svv_svc"
                android:inputType="number"
                android:maxLength="3" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/total_amount"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/total"
        android:textAllCaps="true"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="6.000 KD"
        android:textColor="@color/Black"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/proceed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/resetpasswordicon2x"
            android:text="@string/proceed"
            android:textColor="@color/White" />
    </LinearLayout>
</RelativeLayout>
