<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/menu_bg"
    android:orientation="vertical"
    android:paddingBottom="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp">

    <android.support.v7.widget.CardView
        card_view:cardBackgroundColor="@color/White"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:src="@drawable/menuheader" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thank_u"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/Black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/payment_success"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <Button
                    android:id="@+id/proceed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:background="@drawable/resetpasswordicon2x"
                    android:text="@string/view_summery"
                    android:textColor="@color/White" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>